--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Posts</h1>
@@ -29,3 +30,8 @@
 <br>
 
 <%= link_to 'New Post', new_post_path %>
+
+
+
+<%= line_chart User.group_by_minute(:created_at, time_zone: "Pacific Time (US & Canada)").count %>
+
